@@ -1,4 +1,5 @@
 Development
+	Implement two requested GUI changes, fullscreen on double click and hotkey 'q' to quit
 	Move aspect changes from main view menu to submenu named aspect under view
 	Implement View->Show Subtitles
 	Implement multi-select on File->Open dialog
